# autonomus_sre_bot

./: .env.example  .gitignore  ACTIVATE_JSM_WORKFLOW_GUIDE.md  Dockerfile  JSM_Configuration_Checklist.md  JSM_MCP_INTEGRATION_SUMMARY.md  JSM_State_Manager_Documentation.md  JSM_Workflow_Activation_Troubleshooting.md  JSM_Workflow_Configuration_Guide.md  README.md  README_SELF_HEAL.md  Refactored_Architecture_Documentation.md  daemon_self_heal.py  debug_jira_comprehensive.py  debug_jira_transition.py  debug_service_desk.py  debug_sup47_response.py  detailed_design_document.md  fix_jsm_transitions.py  flow.md  implementation.md  incident_report.md  interface_test.py  jsm_config_template.env  k8s-cronjob.yaml  k8s-daemonset.yaml  k8s-secret-template.yaml  main_refactored_self_heal.py  main_self_heal.py  pyproject-old.toml  pyproject.toml  quick_test.py  requirements_document_ISO25065.md  run_self_heal.py  state_management_deep_dive.md  test_consolidated_crew.py  test_crew_github.py  test_github_mcp.py  test_incident_crew.py  test_jsm_comprehensive_tools.py  (+12 more)
atlassian-mcp-server/: MCP_DOCKER_COMPOSE_README.md  docker-compose.yml  start_mcp_server.sh
sample-crew/: README.md  config.py  example_usage.py  mcp_diagnostic.py  simple_kubectl_tool.py  simple_test_runner.py  test_crew.py  test_results.json
src/autonomous_sre_bot/: crew.py  incident_crew.py  incident_report.md  jsm_state_manager.py  logging_config.py  main.py  main_self_heal.py  self_heal_crew.py
src/autonomous_sre_bot/config/: agents.yaml  self_heal_agents.yaml  self_heal_tasks.yaml  tasks.yaml  workflow_states.yaml
src/autonomous_sre_bot/tools/: README.md  __init__.py  crewai_github_tools.py  crewai_jira_tools.py  crewai_k8s_tools.py  custom_tool.py  jira_mcp_tools.py  jira_simple_tools.bkp  jira_workflow_helper.py  jsm_comprehensive_tool.py  jsm_incident_creator_tool.py  jsm_specialized_tools.py  jsm_state_management_tools.py  kubernetes_crewai_tools.py  log_analyzer_tool.py  mcp_atlassian_tool.py  mcp_config.py  mcp_github_tool.py  mcp_jira_tool.py  mcp_kubernetes_tool.py  middleware_logs_tool.py  simple_github_tool.py  simple_jira_tools.py  simple_kubernetes_tool.py  simple_mcp_tool.py  test_mcp_integration.py
