[project]
name = "autonomous_sre_bot"
version = "0.1.0"
description = "autonomous-sre-bot using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "langfuse",
    "openlit==1.32.0",
    "transformers",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.27.0,<2.0.0",
]

[project.scripts]
autonomous_sre_bot = "autonomous_sre_bot.main:run_incident_management"
run_crew = "autonomous_sre_bot.main:run_incident_management"
train = "autonomous_sre_bot.main:train_incident_crew"
replay = "autonomous_sre_bot.main:replay"
test = "autonomous_sre_bot.main:test_incident_management"
incident_management = "autonomous_sre_bot.main:run_incident_management"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
